# toconline-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/toconline_mcp/: __init__.py  __main__.py  cli.py  config.py  envfile.py  server.py
src/toconline_mcp/auth/: oauth.py  setup.py  store.py
src/toconline_mcp/gmail/: __init__.py  client.py  oauth.py  setup.py  store.py
src/toconline_mcp/http/: client.py  jsonapi.py
src/toconline_mcp/tools/: __init__.py  _helpers.py  addresses.py  auth.py  bank.py  company.py  contacts.py  customers.py  document_actions.py  generic.py  gmail_tools.py  products.py  purchases.py  reference.py  sales_documents.py  sales_receipts.py  services.py  suppliers.py
src/toconline_mcp/util/: errors.py  logger.py
tests/: test_auth_tools.py  test_bank_derivation.py  test_client.py  test_client_403.py  test_concurrency.py  test_envfile.py  test_generic_tool.py  test_gmail_client.py  test_helpers.py  test_jsonapi.py  test_jsonapi_edges.py  test_oauth.py  test_stdio_clean.py  test_store.py  test_write_tools.py
