[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toconline-mcp"
version = "0.3.0"
description = "Local MCP server for the TOCOnline accounting/invoicing API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Miguel Amador" }]
keywords = ["mcp", "toconline", "accounting", "invoicing", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
toconline-mcp = "toconline_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/miguelamador/toconline-mcp"
Issues = "https://github.com/miguelamador/toconline-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/toconline_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
